--- a/home.html
+++ b/home.html
@@ -97,14 +97,14 @@ usemap="#bottom_links" ISMAP /></td>
 <!--MOBILE HOMEPAGE-->
 <div id="mobile-home">
   <div id="mobile-links">
-    <a href="test">ABOUT US</a>
-    <a href="test">CONTACT US</a>
-    <a href="test">FINANCING</a>
-    <a href="test">SERVICE</a>
+    <a href="staff.html">ABOUT US</a>
+    <a href="contact_us.html">CONTACT US</a>
+    <a href="financing.html">FINANCING</a>
+    <a href="service.html">SERVICE</a>
   </div>
   <img id="mobile-logo" src="images/mobile_home_logo.png"/>
-  <a href="test" class="mobile-home-vehicles">Cars</a>
-  <a href="test" class="mobile-home-vehicles">SUVs, Trucks, and Vans</a>
+  <a href="list.html?t=0" class="mobile-home-vehicles">Cars</a>
+  <a href="list.html?t=1" class="mobile-home-vehicles">SUVs, Trucks, and Vans</a>
 </div>
 
 <!--MOBILE FOOTER-->
@@ -114,7 +114,7 @@ usemap="#bottom_links" ISMAP /></td>
     <span style="font-size:16px; font-weight:bold; color:#800000;">(925) 440-CARS</span>  (2277)<br />
     
     <span style="font-size:11px; font-weight:bold;">EMAIL:</span>
-    <a href="EMAIL" style="font-size:14px;">rocky@dehmlowauto.com</a>
+    <a href="mailto:rocky@dehmlowauto.com" style="font-size:14px;">rocky@dehmlowauto.com</a>
   </div>
 
   <div style="font-size:14px; padding:0 0 3px 0; font-weight:bold;">
